# Sparse3D

./: CMakeLists.txt  README.md  Rot2Qua.py  基于内容的多线程视频处理与检索系统.docx  新建 DOC 文档.doc
cmake_modules/: FindG2O.cmake
include/: BuildCorpPointSet.h  ColorCorrespondence.h  ColorGraphMatching.h  GeoGraphMatching.h  GeoSubsidiary.h  GeometricCorrespondence.h  GraphLoopDetect.h  GraphMatching.h  Narf.h  OptApp.h  Png2Cloud.h  ProgressiveOpt.h  ShiTomasi.h  common_include.h  helper.h  jointPointCloud.h  sift.h
src/: BuildCorpPointSet.cpp  CMakeLists.txt  ColorCorrespondence.cpp  ColorGraphMatching.cpp  GeoGraphMatching.cpp  GeometricCorrespondence.cpp  GraphLoopDetect.cpp  GraphMatching.cpp  Narf.cpp  OptApp.cpp  Png2Cloud.cpp  ProgressiveOpt.cpp  ShiTomasi.cpp  common_include.cpp  jointPointCloud.cpp  sift.cpp
test/: CMakeLists.txt  ColorCor.cpp  createPointCloud.cpp  narf_keypoint_extration.cpp  readPara.cpp  sift_test.cpp  testGeometricCorr.cpp  testNarf.cpp  testOpt1.cpp  testPcl.cpp  testPng2Cloud.cpp  testShiTomasi.cpp
